# Group

./: .env  .gitignore  .test_env  alembic.ini  command.md  commands.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: config.py  custom_types.py  main.py
app/migrations/: env.py
app/migrations/versions/: b2231b57683a_init_user_table.py
app/users/: exceptions.py
app/users/adapters/: fast_api.py  repository.py
app/users/domain/: commands.py  models.py
app/users/endpoints/api_v1/: api_v1_router.py  endpoints.py
app/users/orm/: models.py
app/users/service_layer/: handlers.py  unit_of_work.py
app/users/tests/: conftest.py
app/users/tests/e2e/: api_client.py
app/users/tests/unit/: test_users.py
backend/: bootstrap.py  config.py  custom_types.py  main.py
backend/core/adapters/: notifications.py  redis_eventpublisher.py
backend/core/orm/: models.py
backend/core/service_layer/: messagebus.py  unit_of_work.py
backend/endpoints/api_v1/: api_v1_router.py
backend/migrations/core_engine/: env.py
backend/migrations/core_engine/versions/: 2f920a3be450_init_user_table.py
backend/migrations/test_engine/: env.py
backend/migrations/test_engine/versions/: d41c69d7ed4d_init_user_table.py
backend/users/: exceptions.py
backend/users/adapters/: fast_api.py  notifications.py  repository.py
backend/users/domain/: commands.py  events.py  models.py  queries.py
backend/users/orm/: models.py
backend/users/service_layer/: auth.py  handlers.py  helpers.py  unit_of_work.py
backend/users/tests/: conftest.py  random_refs.py
(+4 files in other folders)
